--- a/web/views/index.html
+++ b/web/views/index.html
@@ -121,7 +121,7 @@
                                     structure: [
                                         {name:"序号", field:"row", width: "32px"},
                                         {name:"URL", field:"url", width: "auto"},
-                                        {name:"原因", field:"reason", width: "48px"}
+                                        {name:"问题", field:"problem", width: "48px"}
                                     ]
                                     }, "urlTable"); // make sure you have a target HTML element with this id
                                 grid.startup();
