--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -130,7 +130,7 @@ html, body {
     color: #005FB3;
 }
 
-#pageUrl, #urlToSearch, #urlSearch, #includeChildPages, #exportUrls {
+#siteName, #urlToSearch, #urlSearch {
     height: 24px;
     padding: 0;
     margin: 0;
@@ -143,7 +143,7 @@ html, body {
     padding-top: 8px;
 }
 
-#pageUrl {
+#siteName {
     background: transparent;
     color: white;
     margin-top: 4px;
@@ -217,41 +217,6 @@ html, body {
 
 #urlTable.dojoxGridCell {
     border-color: #C4C4C4;
-}
-
-#urlActions_splitter {
-    display: none;
-}
-
-#urlActions {
-    background-color: #E7F8FF;
-    height: 50px;
-    padding: 0;
-    padding: 0 0 0 8px;
-}
-
-#includeChildPages, #exportUrls {
-    background: transparent;
-}
-
-#includeChildPages label {
-    color: #0076C9;
-    font-weight: 800;
-}
-
-#exportUrls .dijitButtonNode {
-    border: 0;
-    background-image: none;
-    background: transparent;
-    box-shadow: 0 0 0 0;
-}
-
-.exportIcon {
-    background-image: url('../images/export.png');
-    background-repeat: no-repeat;
-    width: 81px;
-    height: 25px;
-    text-align: center;
 }
 
 #bottom {
