--- a/web/views/index.html
+++ b/web/views/index.html
@@ -130,7 +130,7 @@
                                     rowSelector: '20px',
                                     plugins: {
                                         pagination: {
-                                            pageSizes: ["20", "50", "100", "500"],
+                                            pageSizes: ["10", "20", "50", "100", "500"],
                                             description: true,
                                             sizeSwitch: true,
                                             pageStepper: true,
